// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect can remove search 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={360}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={false}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect can remove select all 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={355}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={false}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect can remove selected items 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect custom itemRenderer 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[MockFunction mockedComponent]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect custom messages 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={
      Object {
        "clearAllMessage": "Uncheck all",
        "noItemsMessage": "No entries available...",
        "noneSelectedMessage": "Nothing",
        "searchPlaceholder": "Find...",
        "selectAllMessage": "Check all",
        "selectedMessage": "Checked",
      }
    }
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={
      Object {
        "clearAllMessage": "Uncheck all",
        "noItemsMessage": "No entries available...",
        "noneSelectedMessage": "Nothing",
        "searchPlaceholder": "Find...",
        "selectAllMessage": "Check all",
        "selectedMessage": "Checked",
      }
    }
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect custom noItemsRenderer 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[MockFunction mockedComponent]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[MockFunction mockedComponent]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect custom searchRenderer 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[MockFunction mockedComponent]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect custom selectAllRenderer 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[MockFunction mockedComponent]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect default snapshot 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect displays Loader when loading 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <Loader />
</div>
`;

exports[`MultiSelect displays custom Loader when loading 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <mockConstructor />
</div>
`;

exports[`MultiSelect does not pass disabled if maxSelectedItem has passed 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={360}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={
      Array [
        undefined,
        undefined,
      ]
    }
    showSearch={true}
    showSelectAll={false}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={
      Array [
        undefined,
        undefined,
      ]
    }
    selectedItemRenderer={[Function]}
    selectedItems={
      Array [
        1,
        2,
      ]
    }
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect passed clearAll 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={[MockFunction clearAll]}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect passed filterItems 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={[MockFunction filterItems]}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect passed selectAllItems 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={[MockFunction selectAllItems]}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect passed selectItem 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={[MockFunction selectItem]}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect passed selectedIds 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect passed selectedItems 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={
      Array [
        undefined,
        undefined,
      ]
    }
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={
      Array [
        undefined,
        undefined,
      ]
    }
    selectedItemRenderer={[Function]}
    selectedItems={
      Array [
        1,
        2,
      ]
    }
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect passed unselectItems 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={[MockFunction unselectItems]}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect passes disabled if maxSelectedItem has passed 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={360}
    disabled={true}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={
      Array [
        undefined,
        undefined,
      ]
    }
    showSearch={true}
    showSelectAll={false}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={
      Array [
        undefined,
        undefined,
      ]
    }
    selectedItemRenderer={[Function]}
    selectedItems={
      Array [
        1,
        2,
      ]
    }
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect will pass itemHeight 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={295}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={60}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={undefined}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={60}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect will pass selectAllHeight 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={315}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={60}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={40}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={60}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect will pass selectAllHeight without itemHeight 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": 400,
    }
  }
>
  <SourceList
    calculatedHeight={335}
    disabled={false}
    filterItems={undefined}
    filteredItems={Array []}
    getList={undefined}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    searchIcon={undefined}
    searchRenderer={[Function]}
    searchValue={undefined}
    selectAllHeight={20}
    selectAllItems={undefined}
    selectAllRenderer={[Function]}
    selectItem={undefined}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
  <DestinationList
    clearAll={undefined}
    height={400}
    itemHeight={40}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectedIds={Array []}
    selectedItemRenderer={[Function]}
    selectedItems={Array []}
    selectionStatusRenderer={[Function]}
    unselectItems={undefined}
    withGrouping={false}
  />
</div>
`;

exports[`MultiSelect with responsiveHeight 1`] = `
<ReactHeight
  dirty={true}
  getElementHeight={[Function]}
  hidden={false}
  onHeightReady={[Function]}
  style={
    Object {
      "height": "70%",
    }
  }
>
  <_class
    filterFunction={[Function]}
    height={400}
    items={Array []}
    selectedItems={Array []}
  />
</ReactHeight>
`;

exports[`MultiSelect without responsiveHeight 1`] = `
<ReactHeight
  dirty={true}
  getElementHeight={[Function]}
  hidden={false}
  onHeightReady={[Function]}
  style={
    Object {
      "height": "400px",
    }
  }
>
  <_class
    filterFunction={[Function]}
    height={400}
    items={Array []}
    selectedItems={Array []}
  />
</ReactHeight>
`;
